--- a/AppFilesAlenka/UIMirror/app/src/main/res/navigation/nav_graph.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FirstFragment"
         android:name="com.example.uimirror.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/login_view">
+        tools:layout="@layout/activity_login">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
