--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
@@ -6,7 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".SongSelectionActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/songTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Songs"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:onClick="returnToMainActivity"
+        android:text="Zurück"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toEndOf="@id/songTextView"
+        app:layout_constraintTop_toTopOf="@id/songTextView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/songListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/songTextView" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -20,12 +57,23 @@
             android:textStyle="bold"
             android:layout_marginBottom="16dp"/>
 
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="Zurück"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/songListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+
+
+    </LinearLayout> -->
 
    <!-- <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/songRecyclerView"
@@ -62,4 +110,3 @@
             android:src="@android:drawable/ic_media_play" />
     </LinearLayout>-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
