--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
@@ -10,24 +10,34 @@
         android:id="@+id/songTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="Songs"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
         android:onClick="returnToMainActivity"
         android:text="Zurück"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.866"
-        app:layout_constraintStart_toEndOf="@id/songTextView"
         app:layout_constraintTop_toTopOf="@id/songTextView" />
+
+
+    <Button
+        android:id="@+id/deactivateMainSongButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Song deaktivieren"
+        app:layout_constraintEnd_toStartOf="@id/backButton"
+        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintStart_toEndOf="@id/songTextView"
+        app:layout_constraintTop_toTopOf="@+id/songTextView"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/songListView"
@@ -35,10 +45,13 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/songTextView" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
