--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_song_selection.xml
@@ -6,6 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".SongSelectionActivity">
 
+    <!-- Preview für die Kamera -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/songLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <!-- Layout für den Rest der UI-Elemente -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/songLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/previewView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
     <TextView
         android:id="@+id/songTextView"
         android:layout_width="wrap_content"
@@ -52,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@id/songTextView" />
 
 
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!--
