--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_main.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_main.xml
@@ -100,4 +100,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@android:drawable/ic_menu_manage" />
 
+        <Button
+            android:id="@+id/buttonlogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Logout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
