--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_alarm_editor.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_alarm_editor.xml
@@ -78,7 +78,7 @@
         android:id="@+id/setCancelButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/abbrechen"
+        android:text="Zurück"
         android:layout_marginTop="5dp"
         android:padding="12dp" />
             
