--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_greeting.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_greeting.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="170dp"
-        android:text="Hallo"
+        android:text="Willkommen, der User wird gesucht..."
         android:textColor="@color/lila"
         android:textSize="24sp"
         android:textStyle="bold"
