--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_main.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Logout"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/lila"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
