--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_settings.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_settings.xml
@@ -21,6 +21,7 @@
         android:id="@+id/settingsLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/lila"
         app:layout_constraintTop_toBottomOf="@id/previewView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,6 +170,50 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Benutzerdaten löschen"
+                    android:textSize="18sp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_delete"
+                    android:contentDescription="Löschen" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Trennlinie für den Abschnitt Musik deaktivieren -->
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/deleteUserDataCard" />
+
+        <!-- Abschnitt: Benutzerdaten löschen -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/deleteUserCard"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:layout_constraintTop_toBottomOf="@id/deleteUserDataCard"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/deleteUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Konto löschen"
                     android:textSize="18sp"
                     android:layout_weight="1" />
 
