--- a/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_events.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/layout/activity_events.xml
@@ -8,6 +8,27 @@
     tools:context=".MainActivity">
 
 
+
+    <!-- Preview für die Kamera -->
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/eventsLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Layout für den Rest der UI-Elemente -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/eventsLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/previewView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
     <TextView
         android:id="@+id/appNameTextView"
         android:layout_width="wrap_content"
@@ -66,4 +87,5 @@
         app:backgroundTint="#5537D2"
         app:tint="@color/white" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
